# lib/db/src/schema/products.ts
@@ -9,6 +9,7 @@ export const productsTable = pgTable("products", {
   sku: text("sku"),
   price: numeric("price", { precision: 10, scale: 2 }),
   imageUrl: text("image_url"),
+  fullImageUrl: text("full_image_url"),
   categoryId: integer("category_id"),
   createdAt: timestamp("created_at").defaultNow().notNull(),
   updatedAt: timestamp("updated_at").defaultNow().notNull(),
